2007-03-02  Armin Burgmeier  <armin@arbur.net>

	* glom/mode_data/box_data_details.cc: Remove shadow from Viewport that
	is created by Gtk::ScrolledWindow::add().

2007-03-02  Murray Cumming  <murrayc@murrayc-desktop>

	* autogen.sh: Use --copy with gnome-doc-prepare, because that is 
	what gnome-common does.
	* configure.in: Specify 0.9.0 to GNOME_DOC_INIT()
	Change the default postgres tools path to use 8.2, as used on Ubuntu Feisty, 
	to make my life easier.

1.3.10:

2007-02-22  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc: Add 5434 to the list of ports to try, because this 
	is used in the current Ubuntu Feisty beta for Postgres 8.2, though this might be changed 
	in later Ubuntu Feisty betas. Also added 5435 and 5436 for the future.

2007-02-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: Corrected the title of the relationships overview 
	window.

2007-02-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h:
	More cleanup.

2007-02-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h:
	More syntax corrections.

2007-02-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h: 
	Remember the windows size between instantiations, temporarily for the lifetime of the 
	application.

2007-02-16  Rasmus Toftdahl Olesen  <halfdan@halfdans.net>

	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h:
	Patch in Bug #408408 to correct the source code formatting.

2007-02-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.cc:
	* glom/mode_data/box_data_list.cc: